# airbyte-integrations

./: .bumpversion.cfg  .env  .gitattributes  .gitignore  .licensed.yml  404.html  CNAME  README.md  build.gradle  gradle.properties  index.html  rapidoc.html  search-index-docs-default-current.json  settings.gradle  sitemap.xml
.circleci/: config.yml
.github/: milestone_input.json
.github/scripts/: bulk_add_issues_to_project.sh  bulk_set_date_added.sh  get_project_info.sh  get_sprint_info.sh
.github/workflows/: connector_integration_tests.yml  faster_gradle.yml  gradle.yml  platform-project-start-sprint.yml  release-airbyte-os.yml  test-command.yml
SUMMARY/: index.html
airbyte-api/: api-docs.html
airbyte-bootloader/: Dockerfile
airbyte-cdk/python/: setup.py
airbyte-container-orchestrator/: Dockerfile  build.gradle
airbyte-integrations/base-python/: build.gradle  main_dev.py  setup.py
airbyte-integrations/base-singer/: build.gradle  setup.py
airbyte-integrations/bases/airbyte-protocol/: build.gradle  pyproject.toml
airbyte-integrations/bases/airbyte-protocol/airbyte_protocol/models/: airbyte_protocol.py
airbyte-integrations/bases/base-python/: build.gradle  pyproject.toml
airbyte-integrations/bases/base-singer/: build.gradle  pyproject.toml
airbyte-integrations/connectors/source-appstore-singer/: .gitignore  build.gradle  pyproject.toml
airbyte-integrations/connectors/source-exchangeratesapi-singer/: build.gradle  pyproject.toml  setup.py
airbyte-metrics/reporter/: Dockerfile
airbyte-scheduler/app/: Dockerfile  build.gradle
airbyte-server/: Dockerfile  build.gradle
airbyte-tests/: build.gradle
airbyte-thread-destination/: build.gradle
airbyte-thread-source/: build.gradle  readme.md
airbyte-webapp/: .eslintrc  package-lock.json  package.json
airbyte-webapp/.storybook/: main.ts
airbyte-webapp/src/: index.tsx
airbyte-workers/: Dockerfile  build.gradle
api-documentation/: index.html
api-documentation.html/: index.html
archive/examples/: index.html
archive/examples.htm/: index.html
archive/faq/: index.html
archive/faq.html/: index.html
assets/css/: styles.1b3175d5.css  styles.7d276a1d.css  styles.c8a7554d.css  styles.d30a4f2e.css  styles.ff2dd5a4.css
assets/js/: 0111162d.24453cba.js  0111162d.597b1afb.js  0111162d.b4263d28.js  0111162d.f9ebe0c9.js  01420a66.886125fa.js  01cfaa72.0730aa39.js  01cfaa72.4c9fa82c.js  01cfaa72.615d4a3f.js  01cfaa72.83f57416.js  01cfaa72.98726372.js  01cfaa72.abf583c4.js  01cfaa72.bd7f0ac9.js  01cfaa72.dc6592ff.js  01cfaa72.dd1895fe.js  01cfaa72.ec861a0c.js  01cfaa72.f00bed19.js  01cfaa72.f02bb729.js  01cfaa72.ff79f4b2.js  02424da6.5406b3e5.js  02424da6.99f9935e.js  02424da6.bba4195b.js  02424da6.c0b23473.js  02424da6.d5480f59.js  02424da6.ed167c28.js  02b7912c.06aa4055.js  02b7912c.51906546.js  02b7912c.6b392c45.js  02b7912c.a2214a8b.js  02b7912c.cc0ecba7.js  02b7912c.ec69d872.js  0307547d.0e153a49.js  0307547d.0fa319f6.js  0307547d.22be86b4.js  0307547d.23fcfac8.js  0307547d.251c5935.js  (+2865 more)
career-and-open-positions/: index.html
career-and-open-positions.html/: index.html
connector-development/: index.html
connector-development.htm/: index.html
contributing-to-airbyte/: index.html
contributing-to-airbyte.htm/: index.html
deploying-airbyte/: index.html
deploying-airbyte.htm/: index.html
docs/: SUMMARY.md  index.md
docusaurus/: docusaurus.config.js  index.html
gradle-dependency-update/: index.html
integrations/: index.html
integrations.htm/: index.html
octavia-cli/: Dockerfile  setup.py
project-overview/: index.html
project-overview.html/: index.html
reference/: index.html
reference.html/: index.html
secrets/: encryption_probe  key2  probe5
troubleshooting/: index.html
troubleshooting.html/: index.html
understanding-airbyte/: index.html
understanding-airbyte.html/: index.html
upgrading-airbyte/: index.html
(+1367 files in other folders)
