[tool.poetry]
name = "source-appstore-singer"
version = "0.1.0"
description = ""
authors = ["Airbyte <contact@airbyte.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
appstoreconnect = "0.9.0"
PyJWT = "1.6.4"
tap-appstore = {git = "https://github.com/airbytehq/tap-appstore.git", rev = "08e4fe8"}
airbyte-protocol = {path = "../../bases/airbyte-protocol", develop = true}
base-singer = {path = "../../bases/base-singer", develop = true}
base-python = {path = "../../bases/base-python", develop = true}
airbyte-python-test = {path = "../../bases/base-python-test", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
