[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "source-appstore-singer"
version = "0.1.0"
description = ""
authors = ["Airbyte <contact@airbyte.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
airbyte-python-test = {path = "../../bases/base-python-test", develop = true}
airbyte-protocol = {path = "../../bases/airbyte-protocol", develop = true}
base-python = {path = "../../bases/base-python", develop = true}
base-singer = {path = "../../bases/base-singer", develop = true}
PyJWT = "1.6.4"
appstoreconnect = "0.9.0"
tap-appstore = {git = "https://github.com/airbytehq/tap-appstore.git", rev = "08e4fe8"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
flake8 = "^3.8.4"
black = "^20.8b1"
mypy = "^0.812"
isort = "^5.7.0"
